2005-05-07  Owen Taylor  <otaylor@redhat.com>

	* doc/public/language-bindings.xml doc/public/cairo-doc.xml
	doc/public/Makefile.am: Document suggested conventions and
	techniques for many aspects of creating a language binding 
	for Cairo.

2005-05-07  Owen Taylor  <otaylor@redhat.com>

	* doc/public/cairo-sections.txt: Update.

2005-05-07  Carl Worth  <cworth@cworth.org>

	* src/cairo.h (cairo_set_alpha): Point to both
	cairo_set_source_rgba and cairo_paint_with_alpha in deprecation of
	cairo_set_alpha.

2005-05-07  Carl Worth  <cworth@cworth.org>

	* util/cairo-api-update: Make idempotent substitutions that extend
	old names:

	cairo_select_font		-> cairo_select_font_face
	cairo_pattern_add_color_stop	-> cairo_pattern_add_color_stop_rgba

	by only substituting if the old name is not immediately followed
	by an underscore.

	Tweak the substitution slightly to allow the script to be run on
	the cairo source itself, (eg. avoid changing the REPLACED_BY and
	DEPRECATED_BY macros that must mention the old names).
	
2005-05-07  Carl Worth  <cworth@cworth.org>

	* configure.in:

	* src/cairo-features.h.in: Change definitions of everything in
	cairo-features.h to prefer #if over #ifdef.

	* src/cairo-atsui.h:
	* src/cairo-cache.c:
	* src/cairo-ft-private.h:
	* src/cairo-ft.h:
	* src/cairo-glitz.h:
	* src/cairo-pdf.h:
	* src/cairo-ps.h:
	* src/cairo-quartz.h:
	* src/cairo-win32.h:
	* src/cairo-xcb.h:
	* src/cairo-xlib.h:
	* src/cairo.c:
	* src/cairo.h:
	* src/cairoint.h:
	* test/cairo-test.c: Track #ifdef -> #if changes.
	
	* util/cairo-api-update: Add support to automatically change all
	#ifdef CAIRO_HAS to #if CAIRO_HAS.

2005-05-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c:
	* src/cairo-pattern.c:
	* src/cairo.c:
	* src/cairo.h:
	* src/cairoint.h: Remove deprecated cairo_get_rgb_color that was
	accidentally missed in the recent purge of deprecated functions.

2005-05-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-xcb-surface.c (_render_operator): 