@@ -37,26 +37,26 @@
 #ifndef CAIRO_FEATURES_H
 #define CAIRO_FEATURES_H
 
-#define CAIRO_HAS_PS_SURFACE @PS_SURFACE_FEATURE@
+@PS_SURFACE_FEATURE@
 
-#define CAIRO_HAS_PDF_SURFACE @PDF_SURFACE_FEATURE@
+@PDF_SURFACE_FEATURE@
 
-#define CAIRO_HAS_XLIB_SURFACE @XLIB_SURFACE_FEATURE@
+@XLIB_SURFACE_FEATURE@
 
-#define CAIRO_HAS_QUARTZ_SURFACE @QUARTZ_SURFACE_FEATURE@
+@QUARTZ_SURFACE_FEATURE@
 
-#define CAIRO_HAS_XCB_SURFACE @XCB_SURFACE_FEATURE@
+@XCB_SURFACE_FEATURE@
 
-#define CAIRO_HAS_WIN32_SURFACE @WIN32_SURFACE_FEATURE@
+@WIN32_SURFACE_FEATURE@
 
-#define CAIRO_HAS_GLITZ_SURFACE @GLITZ_SURFACE_FEATURE@
+@GLITZ_SURFACE_FEATURE@
 
-#define CAIRO_HAS_FT_FONT @FT_FONT_FEATURE@
+@FT_FONT_FEATURE@
 
-#define CAIRO_HAS_WIN32_FONT @WIN32_FONT_FEATURE@
+@WIN32_FONT_FEATURE@
 
-#define CAIRO_HAS_ATSUI_FONT @ATSUI_FONT_FEATURE@
+@ATSUI_FONT_FEATURE@
 
-#define CAIRO_HAS_PNG_FUNCTIONS	@PNG_FUNCTIONS_FEATURE@
+@PNG_FUNCTIONS_FEATURE@
 
 #endif
